--- a/SweetSerenityBySarah/App_Data/umbraco.config
+++ b/SweetSerenityBySarah/App_Data/umbraco.config
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [ 
+<!DOCTYPE root [<!ELEMENT LoginRegisterPage ANY>
+<!ATTLIST LoginRegisterPage id ID #REQUIRED>
+ 
 <!ELEMENT AdvertsContainer ANY>
 <!ATTLIST AdvertsContainer id ID #REQUIRED>
 <!ELEMENT ContactPage ANY>
@@ -202,6 +204,13 @@ Australia]]></locationAddress>
       <hideFromMenu>1</hideFromMenu>
       <hideFromSideMenu>1</hideFromSideMenu>
     </StandardTextPage>
+    <LoginRegisterPage id="5128" parentID="1054" level="2" creatorID="0" sortOrder="6" createDate="2016-06-14T20:07:08" updateDate="2016-06-14T20:07:23" nodeName="login-Register" urlName="login-register" path="-1,1054,5128" isDoc="" nodeType="5126" creatorName="Denford" writerName="Denford" writerID="0" template="5127" nodeTypeAlias="LoginRegisterPage">
+      <pageHeading><![CDATA[Login Or Register ]]></pageHeading>
+      <bodyText><![CDATA[<p>Use one of the 2 forms below to either login to your account or register for a new account</p>]]></bodyText>
+      <searchEngineSiteMapHide>0</searchEngineSiteMapHide>
+      <hideFromMenu>0</hideFromMenu>
+      <hideFromSideMenu>0</hideFromSideMenu>
+    </LoginRegisterPage>
   </HomePage>
   <GlobalSettings id="1055" parentID="-1" level="1" creatorID="0" sortOrder="1" createDate="2015-06-24T07:19:53" updateDate="2015-06-24T07:19:53" nodeName="Global Settings" urlName="global-settings" path="-1,1055" isDoc="" nodeType="1046" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="GlobalSettings">
     <SiteDetails id="1056" parentID="1055" level="2" creatorID="0" sortOrder="0" createDate="2015-06-24T07:22:03" updateDate="2016-01-29T01:35:16" nodeName="Site Details" urlName="site-details" path="-1,1055,1056" isDoc="" nodeType="1047" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SiteDetails">
