--- a/SweetSerenityBySarah/Web.config
+++ b/SweetSerenityBySarah/Web.config
@@ -67,12 +67,12 @@
   </system.data>
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="support@sweetserenitybysarah.com">
+      <!--<smtp deliveryMethod="Network" from="support@sweetserenitybysarah.com">
         <network host="mail.netcetera.co.uk" enableSsl="true" userName="support@sweetserenitybysarah.com" password="Dennydante2910"/>
-      </smtp>
-      <!--<smtp>
-        <network host="127.0.0.1" userName="username" password="password" />
       </smtp>-->
+      <smtp>
+        <network host="127.0.0.1" userName="username" password="password" />
+      </smtp>
     </mailSettings>
   </system.net>
   <system.web>
