--- a/SweetSerenityBySarah/App_Data/access.config
+++ b/SweetSerenityBySarah/App_Data/access.config
@@ -1,1 +1,6 @@
-<access/>
+<access>
+  <page id="5135" loginPage="5128" noRightsPage="5128" simple="False">
+    <group id="Site Admin" />
+    <group id="Site Users" />
+  </page>
+</access>
