--- a/SweetSerenityBySarah/App_Data/umbraco.config
+++ b/SweetSerenityBySarah/App_Data/umbraco.config
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT LoginRegisterPage ANY>
+<!DOCTYPE root [<!ELEMENT AccountPage ANY>
+<!ATTLIST AccountPage id ID #REQUIRED>
+<!ELEMENT LoginRegisterPage ANY>
 <!ATTLIST LoginRegisterPage id ID #REQUIRED>
  
 <!ELEMENT AdvertsContainer ANY>
@@ -211,6 +213,13 @@ Australia]]></locationAddress>
       <hideFromMenu>0</hideFromMenu>
       <hideFromSideMenu>0</hideFromSideMenu>
     </LoginRegisterPage>
+    <AccountPage id="5135" parentID="1054" level="2" creatorID="0" sortOrder="7" createDate="2016-06-16T21:15:48" updateDate="2016-06-16T21:29:29" nodeName="Account" urlName="account" path="-1,1054,5135" isDoc="" nodeType="5133" creatorName="Denford" writerName="Denford" writerID="0" template="5134" nodeTypeAlias="AccountPage">
+      <pageHeading><![CDATA[Your account]]></pageHeading>
+      <linkTittle><![CDATA[Account]]></linkTittle>
+      <searchEngineSiteMapHide>0</searchEngineSiteMapHide>
+      <hideFromMenu>1</hideFromMenu>
+      <hideFromSideMenu>1</hideFromSideMenu>
+    </AccountPage>
   </HomePage>
   <GlobalSettings id="1055" parentID="-1" level="1" creatorID="0" sortOrder="1" createDate="2015-06-24T07:19:53" updateDate="2015-06-24T07:19:53" nodeName="Global Settings" urlName="global-settings" path="-1,1055" isDoc="" nodeType="1046" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="GlobalSettings">
     <SiteDetails id="1056" parentID="1055" level="2" creatorID="0" sortOrder="0" createDate="2015-06-24T07:22:03" updateDate="2016-01-29T01:35:16" nodeName="Site Details" urlName="site-details" path="-1,1055,1056" isDoc="" nodeType="1047" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SiteDetails">
