new payment service

--- a/SweetSerenityBySarah/App_Data/umbraco.config
+++ b/SweetSerenityBySarah/App_Data/umbraco.config
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT AccountPage ANY>
+<!DOCTYPE root [ 
+<!ELEMENT AccountPage ANY>
 <!ATTLIST AccountPage id ID #REQUIRED>
-<!ELEMENT LoginRegisterPage ANY>
-<!ATTLIST LoginRegisterPage id ID #REQUIRED>
- 
 <!ELEMENT AdvertsContainer ANY>
 <!ATTLIST AdvertsContainer id ID #REQUIRED>
 <!ELEMENT ContactPage ANY>
@@ -20,6 +18,8 @@
 <!ATTLIST ImageSliderContainer id ID #REQUIRED>
 <!ELEMENT LandingPage ANY>
 <!ATTLIST LandingPage id ID #REQUIRED>
+<!ELEMENT LoginRegisterPage ANY>
+<!ATTLIST LoginRegisterPage id ID #REQUIRED>
 <!ELEMENT PricesPage ANY>
 <!ATTLIST PricesPage id ID #REQUIRED>
 <!ELEMENT ProductPage ANY>
@@ -163,11 +163,11 @@
         <headingImage>1088</headingImage>
       </StandardTextPage>
     </LandingPage>
-    <LandingPage id="1069" parentID="1054" level="2" creatorID="0" sortOrder="2" createDate="2015-06-29T07:35:45" updateDate="2016-06-11T14:52:10" nodeName="Forever Living" urlName="forever-living" path="-1,1054,1069" isDoc="" nodeType="1059" creatorName="Denford" writerName="Denford" writerID="0" template="1063" nodeTypeAlias="LandingPage">
+    <LandingPage id="1069" parentID="1054" level="2" creatorID="0" sortOrder="2" createDate="2015-06-29T07:35:45" updateDate="2016-06-15T21:28:02" nodeName="Forever Living" urlName="forever-living" path="-1,1054,1069" isDoc="" nodeType="1059" creatorName="Denford" writerName="Denford" writerID="0" template="1063" nodeTypeAlias="LandingPage">
       <pageHeading><![CDATA[Our range of Forever Living products]]></pageHeading>
       <bodyText><![CDATA[<p>Forever Aloe Vera is grown at our plantations in the Dominican Republic and Texas. Forever Aloe is carefully grown and cultivated, ensuring the highest quality plant possible. Aloe is often referred to as nature's best gift due to the proven health benefits derived from the gel found inside the leaf of the plant. Growing Aloe with care in the best possible climate and conditions guarantees that you receive the best products available. From plant to product to you!</p>
 <p>Shop for your favorite Forever products including best-selling weight management, nutritional supplements, Flawless by Sonya® color cosmetics, iconic Aloe Vera Gel® and many more from the shop links above.</p>]]></bodyText>
-      <linkTittle><![CDATA[Forever Living]]></linkTittle>
+      <linkTittle><![CDATA[Forever]]></linkTittle>
       <searchEngineSiteMapHide>0</searchEngineSiteMapHide>
       <hideFromMenu>0</hideFromMenu>
       <hideFromSideMenu>0</hideFromSideMenu>
@@ -222,13 +222,18 @@ Australia]]></locationAddress>
     </AccountPage>
   </HomePage>
   <GlobalSettings id="1055" parentID="-1" level="1" creatorID="0" sortOrder="1" createDate="2015-06-24T07:19:53" updateDate="2015-06-24T07:19:53" nodeName="Global Settings" urlName="global-settings" path="-1,1055" isDoc="" nodeType="1046" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="GlobalSettings">
-    <SiteDetails id="1056" parentID="1055" level="2" creatorID="0" sortOrder="0" createDate="2015-06-24T07:22:03" updateDate="2016-01-29T01:35:16" nodeName="Site Details" urlName="site-details" path="-1,1055,1056" isDoc="" nodeType="1047" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SiteDetails">
+    <SiteDetails id="1056" parentID="1055" level="2" creatorID="0" sortOrder="0" createDate="2015-06-24T07:22:03" updateDate="2016-06-22T21:40:29" nodeName="Site Details" urlName="site-details" path="-1,1055,1056" isDoc="" nodeType="1047" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SiteDetails">
       <siteName><![CDATA[Sweet Serenity by Sarah]]></siteName>
       <siteEmailAddress><![CDATA[support@sweetserenitybysarah.com]]></siteEmailAddress>
       <sitePhoneNumber><![CDATA[0424 330 008]]></sitePhoneNumber>
       <siteLogo>4128</siteLogo>
       <defaultKeyWords><![CDATA[Sweet Serenity, Sugaring, Forever Living, Sarah, Serenity,Holistic Therapies, Facials, Beauty, Aloe Vera, Sugaring in Adelaide, Sugaring hair removal Adelaide]]></defaultKeyWords>
       <defaultMetaDescription><![CDATA[We specialise in Sugaring, Holistic Therapies and Forever living products. All our products we use are natural based from the sugar paste for all our sugaring procedures to the before and after care products which are all Aloe Vera based products from Forever Living.]]></defaultMetaDescription>
+      <livePaymentmode>0</livePaymentmode>
+      <testsecretapikey><![CDATA[sk_test_XgqG8RG2MWDMsm6WcOuVZc5A]]></testsecretapikey>
+      <livesecretapikey><![CDATA[ sk_live_Mg0JMHZFDyoJ7YWmAuDYNdUz]]></livesecretapikey>
+      <testpublishapikey><![CDATA[pk_test_7mFtUZzbxDespYuEjpQPYzzi]]></testpublishapikey>
+      <livepublishapikey><![CDATA[pk_live_FHkxvJDYUtM0Q3WccdYVLhV8]]></livepublishapikey>
     </SiteDetails>
     <SocialLinksContainer id="1057" parentID="1055" level="2" creatorID="0" sortOrder="1" createDate="2015-06-24T07:22:30" updateDate="2015-06-24T07:22:30" nodeName="Social Links" urlName="social-links" path="-1,1055,1057" isDoc="" nodeType="1048" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SocialLinksContainer">
       <SocialLink id="1058" parentID="1057" level="3" creatorID="0" sortOrder="0" createDate="2015-06-24T07:22:53" updateDate="2015-12-10T12:29:55" nodeName="Facebook" urlName="facebook" path="-1,1055,1057,1058" isDoc="" nodeType="1049" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="SocialLink">
