--- a/SweetSerenityBySarah/SweetSerenityBySarah.csproj
+++ b/SweetSerenityBySarah/SweetSerenityBySarah.csproj
@@ -1087,6 +1087,7 @@
     <Content Include="Views\AccountPage.cshtml" />
     <Content Include="Views\Partials\Account\PaymentForm.cshtml" />
     <Content Include="Views\Partials\Account\PaymentsList.cshtml" />
+    <Content Include="Views\Partials\Master\UrlRedirect.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3672,9 +3673,11 @@
     <Compile Include="Models\AccountLoginModel.cs" />
     <Compile Include="Models\AccountRegisterModel.cs" />
     <Compile Include="Models\ContactModel.cs" />
+    <Compile Include="Models\PaymentFormModel.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="PaymentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
