Updated stripe intergrated payment form

--- a/SweetSerenityBySarah/SweetSerenityBySarah.csproj
+++ b/SweetSerenityBySarah/SweetSerenityBySarah.csproj
@@ -742,6 +742,7 @@
     <Content Include="Images\AloeVeraPlant.jpg" />
     <Content Include="Images\Aloe_Drinks.jpg" />
     <Content Include="Images\Aloe_Drinks.png" />
+    <Content Include="Images\bamboo-orchid.png" />
     <Content Include="Images\Feathered signature ORIGINAL %282%29.jpg" />
     <Content Include="Images\ForeverBird.jpg" />
     <Content Include="Images\ForeverBird.png" />
@@ -750,9 +751,22 @@
     <Content Include="Images\foreverLogo.png" />
     <Content Include="Images\headerImage.jpg" />
     <Content Include="Images\massage.jpg" />
+    <Content Include="Images\orchid.png" />
     <Content Include="Images\Site-Background.jpg" />
+    <Content Include="Images\SSS_Logo_Square.png" />
     <Content Include="Images\Sugaring.jpg" />
     <Content Include="Images\SugaringRoom.jpg" />
+    <Content Include="Images\sugaringStages.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah final 1.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah final 2.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah final 3.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah final 4.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah final 5.jpg" />
+    <Content Include="Images\Sweet Serenity by Sarah Logo.jpg" />
+    <Content Include="Images\Sweet-Serenity-By-Sarah-Logo-1.jpg" />
+    <Content Include="Images\Sweet-Serenity-By-Sarah-Logo-1.png" />
+    <Content Include="Images\Sweet-Serenity-By-Sarah-Logo.jpg" />
+    <Content Include="Images\Sweet-Serenity-By-Sarah-Logo.png" />
     <Content Include="Media\1001\foreverlivingproducts.jpg" />
     <Content Include="Media\1002\massage.jpg" />
     <Content Include="Media\1003\sugaring.jpg" />
