--- a/SweetSerenityBySarah/SweetSerenityBySarah.csproj
+++ b/SweetSerenityBySarah/SweetSerenityBySarah.csproj
@@ -730,11 +730,13 @@
     <Content Include="Css\bootstrap.css" />
     <Content Include="Css\Content RTE Styles.css" />
     <Content Include="Css\SiteStyles.css" />
+    <Content Include="default.html" />
     <Content Include="font-awesome\css\font-awesome.css" />
     <Content Include="font-awesome\css\font-awesome.min.css" />
     <Content Include="font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\Josefin_Sans\OFL.txt" />
     <Content Include="fonts\Open_Sans\LICENSE.txt" />
+    <Content Include="google580741c516edc2bf.html" />
     <Content Include="Images\60 Day Logo.jpg" />
     <Content Include="Images\AllAloeVeraDrinks.png" />
     <Content Include="Images\AloeVeraDrink.jpg" />
@@ -815,6 +817,7 @@
     <Content Include="Media\1021\img-20150614-wa0012_big-thumb.jpg" />
     <Content Include="Media\1021\img-20150614-wa0012_thumb.jpg" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="robots.txt" />
     <Content Include="Scripts\blueimp-gallery.min.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap-image-gallery.min.js" />
@@ -1102,6 +1105,7 @@
     <Content Include="Views\Partials\Account\PaymentForm.cshtml" />
     <Content Include="Views\Partials\Account\PaymentsList.cshtml" />
     <Content Include="Views\Partials\Master\UrlRedirect.cshtml" />
+    <None Include="web.backup.1444209675.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
