update old email address references

--- a/SweetSerenityBySarah/App_Data/umbraco.config
+++ b/SweetSerenityBySarah/App_Data/umbraco.config
@@ -324,6 +324,16 @@ Australia]]></locationAddress>
         <stripeChargeStatus><![CDATA[succeeded]]></stripeChargeStatus>
         <chargedMember>5145</chargedMember>
       </PaymentDetails>
+      <PaymentDetails id="5148" parentID="5140" level="3" creatorID="0" sortOrder="5" createDate="2016-07-31T20:58:14" updateDate="2016-07-31T20:58:14" nodeName="Denford Mutseriwa - ch_18dI72E4n3HnKh06ivGjF7hY" urlName="denford-mutseriwa-ch_18di72e4n3hnkh06ivgjf7hy" path="-1,1055,5140,5148" isDoc="" nodeType="5139" creatorName="Denford" writerName="Denford" writerID="0" template="0" nodeTypeAlias="PaymentDetails">
+        <paymentAmount><![CDATA[200]]></paymentAmount>
+        <paymentDescription><![CDATA[Payment for treatment for : Denford Mutseriwa]]></paymentDescription>
+        <paymentEmailAddress><![CDATA[babybwoy2001@yahoo.co.uk]]></paymentEmailAddress>
+        <stripeChargeId><![CDATA[ch_18dI72E4n3HnKh06ivGjF7hY]]></stripeChargeId>
+        <stripeChargeCustomerId><![CDATA[cus_8tHJad6sGskMOw]]></stripeChargeCustomerId>
+        <stripeChargeCaptured>1</stripeChargeCaptured>
+        <stripeChargeStatus><![CDATA[succeeded]]></stripeChargeStatus>
+        <chargedMember>5132</chargedMember>
+      </PaymentDetails>
     </PaymentsContainer>
   </GlobalSettings>
 </root>
